# rain

./: Cargo.toml  rustfmt.toml
src/: app.rs  client.rs  keypad.rs  main.rs  tx.rs  utils.rs
src/apps/: emulator.rs  login.rs  mod.rs
src/apps/emulator/: asm.rs  emu.rs  mod.rs
src/panels/: frame_history.rs  mod.rs  system.rs
src/panels/hxd/: data.rs  mod.rs  ui.rs  utils.rs
src/repr/: login.rs  session.rs
src/widgets/: block.rs  error.rs  hex.rs  mod.rs  password.rs
