[package]
name = "rain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Egui
egui = { version = "0.29" }
egui_extras = { version = "0.29" }
egui-toast = { version = "0.15" }
egui-file-dialog = "0.7"
eframe = { version = "0.29", features = ["wgpu"] }

# Async IO
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
concurrent-queue = { version = "2.5" }
ehttp = { version = "0.5", features = ["json", "native-async"] }

# Riscv
raki = { version = "1.0" }

# Utils
tracing = { version = "0.1" }
lazy_static = { version = "1.5" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["base64"] }
json = { package = "serde_json", version = "1.0" }
base64 = { version = "0.22.1" }
thiserror = { version = "1.0" }

[features]
wgpu = ["eframe/wgpu"]
serde = []